Added list products from PayPal catelog

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             <a href="/create/product">Create a new product</a>
         </li>
         <li>
-            <a href="/list/products">List all products json</a>
+            <a href="/api/list/products">List all products json</a>
         </li>
         <li>
             <a href="/buy/product">Buy Product</a>
